--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           cache: true
 
       - name: Install golangci-lint
-        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s v2.1.2
 
       - name: Check formatting
         run: |
@@ -32,19 +32,6 @@ jobs:
 
       - name: Run golangci-lint
         run: golangci-lint run ./...
-
-  build-and-test:
-    name: Build and Test
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.24'
-          cache: true
 
       - name: Build
         run: go build -v ./cmd/mojito
@@ -92,19 +79,7 @@ jobs:
           sudo dpkg -i hurl_2.0.1_amd64.deb
 
       - name: Create test config
-        run: |
-          mkdir -p config
-          cat > config/config.yaml << EOF
-          database:
-            type: postgres
-            host: localhost
-            port: 5432
-            user: postgres
-            password: postgres
-            name: mojito_test
-            sslMode: disable
-            timeZone: UTC
-          EOF
+        run: mv config.postgres.yaml config.yaml
 
       - name: Build and start server with coverage
         run: |
