--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
   docker:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    needs: integration-test
+    needs: lint-and-test
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
