--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           sudo dpkg -i hurl_2.0.1_amd64.deb
 
       - name: Create test config
-        run: mv ./config/config.postgres.yaml ./config/config.yaml
+        run: cp ./config/config.postgres.yaml ./config/config.yaml
 
       # https://go.dev/doc/build-cover
       - name: Build and start server with coverage
