--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,26 +10,11 @@ jobs:
   lint-and-test:
     name: Lint and unit tests
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:17
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: mojito
-        ports:
-          - 5432:5432
-        volumes:
-          - postgres_data:/var/lib/postgresql/data
-          - ./internal/app/models/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v3
+      - name: Start services
+        run: docker-compose up -d
 
       - name: Set up Go
         uses: actions/setup-go@v4
