--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v1
       - name: Start services
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Set up Go
         uses: actions/setup-go@v4
