--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,36 +2,26 @@ name: Mojito CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   lint-and-test:
     name: Lint and unit tests
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:17
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: mojito
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v1
+      - name: Start services
+        run: docker compose up -d
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.24'
+          go-version: "1.24"
           cache: true
 
       - name: Check formatting
@@ -47,13 +37,7 @@ jobs:
         with:
           config: ./build/ci/revive.toml
 
-      - name: Install Hurl
-        run: |
-          curl -LO https://github.com/Orange-OpenSource/hurl/releases/download/2.0.1/hurl_2.0.1_amd64.deb
-          sudo dpkg -i hurl_2.0.1_amd64.deb
-
-      - name: Create test config
-        run: cp ./config/config.postgres.yaml ./config/config.yaml
+      - uses: gacts/install-hurl@v1
 
       # https://go.dev/doc/build-cover
       - name: Build and start server with coverage
@@ -65,24 +49,11 @@ jobs:
 
       - name: Run API tests with Hurl
         run: |
-          hurl --test --variable host=http://localhost:8080 tests/users.hurl
           hurl --test --variable host=http://localhost:8080 tests/login.hurl
+          hurl --test --variable host=http://localhost:8080 tests/users.hurl
           hurl --test --variable host=http://localhost:8080 tests/items.hurl
           hurl --test --variable host=http://localhost:8080 tests/utils.hurl
           curl http://localhost:8080/api/v1/test/shutdown || true
-
-      # Test migrator tool
-      - name: Test migrator tool
-        run: |
-          mkdir -p ./scripts/db
-          rm -rf ./scripts/db/*
-          go build -cover -o migrator ./cmd/migrator
-          GOCOVERDIR=covdatafiles ./migrator
-          if [ "$(ls -A scripts/db | wc -l)" -eq 0 ]; then
-            echo "No migration files were generated"
-            exit 1
-          fi
-          echo "Migrator test passed successfully"
 
       - name: post process coverage profiles
         run: |
